Added a few tests

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
         "psr-0": {
             "Kiernan\\Breadcrumbs": "src/"
         }
+    },
+    "require": {
+        "phpunit/phpunit": "^5.7"
     }
 }
